--- a/custom_addons/inventory_consolidated_report/views/menu.xml
+++ b/custom_addons/inventory_consolidated_report/views/menu.xml
@@ -4,18 +4,51 @@
     <record id="view_tree_inventory_consolidated_report" model="ir.ui.view">
         <field name="name">inventory.consolidated.tree</field>
         <field name="model">inventory.consolidated</field>
-        <field name="arch" type="xml">
-            <tree string="Inventory Consolidated Report">
-                <field name="name"/>
-                <field name="location_id" invisible="1"/>
+        <field eval="10" name="priority"/>
+         <field name="arch" type="xml">
+            <tree string="Inventory Valuation" create="0" delete="0">
                 <field name="product_id"/>
                 <field name="qty"/>
-                <field name="product_uom_id"/>
-                <field name="package_id"/>
-<!--                <field name="product_qty"/>-->
+                <field name="product_uom_id" groups="product.group_uom"/>
+                <field name="location_id"/>
+                <field name="owner_id" groups="stock.group_tracking_owner"/>
+                <field name="lot_id" groups="stock.group_production_lot"/>
+                <field name="package_id" groups="stock.group_tracking_lot"/>
+                <field name="packaging_type_id" invisible="1"/>
+                <field name="in_date"/>
+                <field name="inventory_value" sum="Total"/>
+                <field name="reservation_id" invisible='1'/>
+                <field name="propagated_from_id" invisible='1'/>
+                <field name='company_id' groups="base.group_multi_company"/>
             </tree>
         </field>
     </record>
+
+        <record model="ir.ui.view" id="view_quantpackage_tree">
+        <field name="name">inventory.quantpackage.tree</field>
+        <field name="model">inventory.quantpackage</field>
+        <field eval="10" name="priority"/>
+        <field name="arch" type="xml">
+            <tree string="Package">
+                <field name="display_name"/>
+                <field name="packaging_id"/>
+                <field name="location_id"/>
+                <field name="company_id"/>
+            </tree>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="action_package_view">
+        <field name="context">{}</field>
+        <field name="name">Packages</field>
+        <field name="res_model">inventory.quantpackage</field>
+        <field name="help" type="html">
+            <p>Packages are usually created by pack operations made on transfers and can contains several different products. You can then reuse a package to move its whole content somewhere else, or to pack it into another bigger package. A package can also be unpacked, allowing the disposal of its former content as single units again.
+            </p>
+        </field>
+    </record>
+
+    <menuitem id="menu_package" name="Packages" parent="stock.menu_warehouse_report" action="action_package_view" groups="stock.group_tracking_lot"/>
 
     <!--action of inventory consolidated report menu-->
     <act_window id="action_inventory_consolidated_report"
