--- a/custom_addons/sales_report_by_saleperson/report/sale_collection_report_view.xml
+++ b/custom_addons/sales_report_by_saleperson/report/sale_collection_report_view.xml
@@ -59,7 +59,7 @@
                                     </td>
                                     <td style="border: 1px solid black;">
                                                 <span t-esc="order[3]"/>
-                                        <t t-set="total_sum" t-value="total_sum - order[3]"/>
+                                        <t t-set="total_sum" t-value="total_sum + order[3]"/>
                                     </td>
                                 </tr>
                                 <tr>
