--- a/custom_addons/sales_report_by_saleperson/wizard/sale_productcate_wzd_view.xml
+++ b/custom_addons/sales_report_by_saleperson/wizard/sale_productcate_wzd_view.xml
@@ -16,7 +16,8 @@
                     </group>
 					<group>
                         <group>
-                            <field name="categ_id"/>
+                        <field name="categ_id" filter_domain="[('categ_id', 'child_of', self)]"/>
+                            <!-- <field name="categ_id"/> -->
                         </group>
                         <group>
                             
