--- a/custom_addons/sales_report_by_saleperson/report/sale_collection_report_view.xml
+++ b/custom_addons/sales_report_by_saleperson/report/sale_collection_report_view.xml
@@ -32,7 +32,6 @@
                                 <span t-esc="user"/>
                             </b>
                         </center>
-                        <t t-set="neg" t-value="-1"/>
                         <t t-set="total_sum" t-value="0"/>
                         <table class="table table-condensed" style="border: 1px solid black;">
                             <thead>
@@ -40,43 +39,31 @@
                                 <th style="border: 1px solid black;">S/N</th>
                                     <th style="border: 1px solid black;">Reference Number</th>
                                     <th style="border: 1px solid black;">Date</th>
-                                    <th style="border: 1px solid black;">Payment Type</th>
-                                    <th style="border: 1px solid black;">Amount</th>
+                                    <th style="border: 1px solid black;">Amount Type</th>
+									<th style="border: 1px solid black;">Amount</th>
 
                                 </tr>
-                                <tr t-foreach="data[user]" t-as="order">
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="order_index+1"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="order[0]"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                            <span t-esc="order[1]"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                            <span t-esc="order[2]"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                                <span t-esc="order[3]"/>
-                                        <t t-set="total_sum" t-value="total_sum + order[3]"/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td style="border: 1px solid black;">
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <b>Total Amount:</b>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="total_sum"/>
-                                    </td>
-                                </tr>
-                            </thead>
+	                         </thead>
+	                         <tbody>
+	                                <tr t-foreach="data[user]" t-as="order">
+										<td style="border: 1px solid black;">
+											<span t-esc="order_index+1"/>
+										</td>
+										<td style="border: 1px solid black;">
+											<span t-esc="order[0]"/>
+										</td>
+										<td style="border: 1px solid black;">
+												<span t-esc="order[1]"/>
+										</td>
+										<td style="border: 1px solid black;">
+												<span t-esc="order[2]"/>
+										</td>
+										<td style="border: 1px solid black;">
+													<span t-esc="order[3]"/>
+											<t t-set="total_sum" t-value="total_sum + order[3]"/>
+										</td>
+                                	</tr>
+                                </tbody>
                         </table>
                     </t>
             </div>
