--- a/custom_addons/sales_report_by_saleperson/report/sale_saleperson_report_view.xml
+++ b/custom_addons/sales_report_by_saleperson/report/sale_saleperson_report_view.xml
@@ -28,49 +28,52 @@
 	                        <t t-set="total_pati" t-value="0"/>
                         <table class="table table-condensed" style="border: 1px solid black;">
                             <thead>
-                                <tr style="border: 1px solid black;">
-                                	<th style="border: 1px solid black;">S/N</th>
-                                    <th style="border: 1px solid black;">User Name</th>
-                                    <th style="border: 1px solid black;">Full Name</th>
-                                    <th style="border: 1px solid black;">Total Patient</th>
-                                    <th style="border: 1px solid black;">Amount</th>
-
-                                </tr>
-                                <tr t-foreach="lines" t-as="line">
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="line_index+1"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="line['user_name']"/>                                        
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="line['full_name']"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="line['patient']"/>
-                                        <t t-set="total_pati" t-value="total_pati + line['patient']"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                    <span t-esc="line['total']"/>
-                                        <t t-set="total_sum" t-value="total_sum + line['total']"/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td style="border: 1px solid black;">
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                    <b>Total Amount:</b>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="total_pati"/>
-                                    </td>
-                                    <td style="border: 1px solid black;">
-                                        <span t-esc="total_sum"/>
-                                    </td>
-                                </tr>
-                            </thead>
+	                            <tr style="border: 1px solid black;">
+		                                	<th style="border: 1px solid black;">S/N</th>
+		                                    <th style="border: 1px solid black;">User Name</th>
+		                                    <th style="border: 1px solid black;">Full Name</th>
+		                                    <th style="border: 1px solid black;">Total Patient</th>
+		                                    <th style="border: 1px solid black;">Amount</th>
+		
+		                         </tr>
+	                         </thead>
+                            <tbody>
+	                                
+	                                <tr t-foreach="lines" t-as="line">
+	                                    <td style="border: 1px solid black;">
+	                                        <span t-esc="line_index+1"/>
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                        <span t-esc="line['user_name']"/>
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                        <span t-esc="line['full_name']"/>
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                        <span t-esc="line['patient']"/>
+	                                        <t t-set="total_pati" t-value="total_pati + line['patient']"/>
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                    <span t-esc="line['total']"/>
+	                                        <t t-set="total_sum" t-value="total_sum + line['total']"/>
+	                                    </td>
+	                                </tr>
+	                                <tr>
+	                                    <td style="border: 1px solid black;">
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                    <b>Total Amount:</b>
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                        <span t-esc="total_pati"/>
+	                                    </td>
+	                                    <td style="border: 1px solid black;">
+	                                        <span t-esc="total_sum"/>
+	                                    </td>
+	                                </tr>
+                                </tbody>
                         </table>
 	                   	</div>
 						<br/>
