--- a/custom_addons/sales_report_by_saleperson/report/saleperson_report_view.xml
+++ b/custom_addons/sales_report_by_saleperson/report/saleperson_report_view.xml
@@ -42,6 +42,8 @@
                                     <th style="border: 1px solid black;">Amount</th>
 
                                 </tr>
+                            </thead>
+                            <tbody>
                                 <tr t-foreach="data[user]" t-as="ordert">
                                     <td style="border: 1px solid black;">
                                         <span t-esc="ordert_index+1"/>
@@ -69,7 +71,7 @@
                                         <span t-esc="total_sum"/>
                                     </td>
                                 </tr>
-                            </thead>
+                            </tbody>
                         </table>
                     </t>
             </div>
